--- a/parentNChild.ini
+++ b/parentNChild.ini
@@ -1,2 +1,4 @@
 [Section1]
-pc_sending_rate = 10 #in messages/sec
+pc_sending_rate  = 10 #in messages/sec
+pc_complexity    = simple
+pc_log_directory = ./log_path
